# SmartGrid

./: .dockerignore  .gitignore  Dockerfile  MAINTAINER_GUIDE.md  Makefile  README.md  SMARTGRID_DEPLOYMENT_DEMO_README_EN.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
configs/common/: data_sources.yaml
configs/consumption/: mlp_baseline.yaml  mlp_cyclical.yaml  mlp_cyclical_lagagg.yaml  mlp_cyclical_weather_basic.yaml  mlp_cyclical_weather_dynamics.yaml  mlp_cyclical_weather_dynamics_all.yaml  mlp_no_temp.yaml  mlp_short_lags.yaml  mlp_shortlags_cyclical_weather_basic.yaml  mlp_strict_day_ahead_baseline.yaml  mlp_strict_day_ahead_cyclical_weather_basic.yaml  mlp_strict_day_ahead_cyclical_weather_shifted_dynamics.yaml  mlp_strict_day_ahead_cyclical_weather_shifted_dynamics_h512_256_128_do010_wd1em5.yaml  mlp_strict_day_ahead_weather_basic.yaml  mlp_weather_all.yaml  mlp_weather_basic.yaml
data/processed/: Holidays.xlsx
docker/: entrypoint.sh
docs/: API_AND_SCHEDULER_INTEGRATION.md  ARCHITECTURE_AND_CODE_MAP.md  CUSTOMIZATION_GUIDE.md  DATA_BACKEND_MIGRATION.md  NEXT_STEPS.md  NOTEBOOK_AND_DEMO_GUIDE.md  OPERATIONS_AND_DEPLOYMENT.md  QUICKSTART.md  RECOVERY_EXPLANATION.md  SMARTGRID_DOCKER_README.md
docs/archive/: NOTEBOOK_V4_AUDIT_SUMMARY.md  SMARTGRID_DOCKER_AUDIT.md  SMARTGRID_GPU_README.md
notebooks/experiments/: NOTEBOOK_USAGE_GUIDE.md  SmartGrid_Analyse_Detaillee_Run.ipynb  (+11 more)
scripts/: benchmark_feature_variants.py  benchmark_replay_models.py  check_setup.py  diagnose_offline_vs_replay_parity.py  generate_cli_demo_notebook_v4.py  predict_next_day.py  profile_pipeline.py  promote_consumption_run.py  replay_period.py  train_consumption.py
tests/: test_api.py  test_data_catalog.py  test_day_ahead.py  test_features.py  test_metrics.py  test_reporting.py  test_temporal_semantics.py
(+97 files in other folders)
