[project]
name = "smart-grid"
version = "0.2.0"
description = "Smart Grid forecasting platform for energy consumption and photovoltaic production"
readme = "README.md"
authors = [
    { name = "Khalid Bensaber" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "ipykernel>=7.2.0",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "requests>=2.32.0",
    "scikit-learn>=1.4",
    "seaborn>=0.13.2",
    "tensorboard>=2.16",
    "torch>=2.2",
    "uvicorn>=0.29",
]

[project.scripts]
smartgrid-train-consumption = "smartgrid.cli.train_consumption:main"
smartgrid-promote-consumption = "smartgrid.cli.promote_consumption:main"
smartgrid-predict-next-day = "smartgrid.cli.predict_next_day:main"
smartgrid-replay-period = "smartgrid.cli.replay_period:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29",
    "jupyterlab>=4.1",
    "pytest>=8.2",
    "ruff>=0.5",
]
legacy = [
    "tensorflow>=2.16",
    "keras>=3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
testpaths = [
    "tests"
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.hatch.build.targets.wheel]
packages = ["src/smartgrid"]
[tool.hatch.build.targets.sdist]
include = [
  "src/smartgrid",
  "scripts",
  "configs",
  "README.md",
  "pyproject.toml",
]
